Added more explicit options to run and load targets to make it easier to do small changes to run locally in a different way